--- a/src/css/style.css
+++ b/src/css/style.css
@@ -166,10 +166,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -217,10 +217,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -380,10 +380,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -475,10 +475,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -558,10 +558,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -666,10 +666,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -707,6 +707,10 @@ body {
       width: 130px;
       height: 130px;
       background-position: center; } }
+  @media (max-width: 767px) {
+    #about-us .timeline .container-timeline:nth-of-type(1)::after, #about-us .timeline .container-timeline:nth-of-type(3)::after, #about-us .timeline .container-timeline:nth-of-type(2)::after, #about-us .timeline .container-timeline:nth-of-type(4)::after, #about-us .timeline .container-timeline:last-of-type::after {
+      width: 80px;
+      height: 80px; } }
 
 #about-us .title {
   margin: 100px auto 80px auto;
@@ -867,6 +871,9 @@ body {
     @media (max-width: 992px) {
       #about-us .timeline h3 {
         margin-bottom: 10px; } }
+    @media (max-width: 767px) {
+      #about-us .timeline h3 {
+        font-size: 14px; } }
   #about-us .timeline p {
     color: #777;
     font-family: "Roboto Slab", serif;
@@ -876,6 +883,9 @@ body {
     @media (min-width: 992px) and (max-width: 1199px) {
       #about-us .timeline p {
         font-size: 12px; } }
+    @media (max-width: 767px) {
+      #about-us .timeline p {
+        font-size: 10px; } }
 
 /* $pc-large: (min-width: 1200px);
 $pc-medium: (min-width: 992px);
@@ -902,10 +912,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -1013,10 +1023,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -1072,10 +1082,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
@@ -1155,8 +1165,8 @@ body {
     position: absolute;
     top: 20%;
     left: 55%;
-    width: 100%;
-    height: 100%; }
+    width: 45%;
+    height: 80%; }
 
 /* $pc-large: (min-width: 1200px);
 $pc-medium: (min-width: 992px);
@@ -1183,10 +1193,10 @@ body {
   height: 50px;
   text-align: center;
   border-radius: 4px;
-  margin: 30px;
+  margin: 10px;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 2%;
+  right: 2%;
   -webkit-transition: background-color 0.3s;
   -o-transition: background-color 0.3s;
   transition: background-color 0.3s;
