--- a/src/css/style.css
+++ b/src/css/style.css
@@ -826,7 +826,8 @@ body {
           font-size: 14px; } }
       @media (max-width: 992px) {
         #about-us .timeline .container-timeline:last-of-type::after {
-          padding: 25px 7px; } }
+          padding: 15px 7px;
+          font-size: 10px; } }
   #about-us .timeline .container-left {
     text-align: right;
     left: 0;
@@ -882,10 +883,10 @@ body {
     line-height: 1.3; }
     @media (min-width: 992px) and (max-width: 1199px) {
       #about-us .timeline p {
-        font-size: 12px; } }
+        font-size: 13px; } }
     @media (max-width: 767px) {
       #about-us .timeline p {
-        font-size: 10px; } }
+        font-size: 11px; } }
 
 /* $pc-large: (min-width: 1200px);
 $pc-medium: (min-width: 992px);
