refactored code in header section, remove parallax section

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,11 +1,5 @@
 @import '_common.scss';
 
-@mixin center-vertical {
-	position: relative;
-	top: 50%;
-	transition: translateY(-50%);
-}
-
 @mixin hamburger {
 	position: absolute;
 	top: 50%;
@@ -59,6 +53,9 @@
 		min-height: 100vh;
 	}
 	nav {
+		position: relative;
+		top: 0;
+		z-index: 9999;
 		background: transparent;
 		margin: 0 auto;
 		.logo {
@@ -71,6 +68,10 @@
 				li {
 					display: block;
 					float: none;
+					&:hover {
+						text-decoration: none;
+						background: $hover-bg-color;
+					}
 					a {
 						width: 100%;
 						font-size: 14px;
@@ -79,10 +80,6 @@
 						padding: 5px 10px;
 						line-height: 3;
 						color: $text-color-light;
-						&:hover {
-							text-decoration: none;
-							background: $hover-bg-color;
-						}
 					}
 				}
 			}
@@ -103,9 +100,14 @@
 			background-color: #333;
 			transition: background-color 300ms ease-in-out;
 		}
+		&.unactive-bg {
+			background-color: '';
+			transition: background-color 300ms ease-in-out;
+		}
 	}
 	@media (min-width: $tablet) {
 		nav {
+			margin-top: 20px;
 			.nav-mobile {
 				display: none;
 			}
@@ -123,167 +125,57 @@
 				float: right;
 				width: 70%;
 				.nav-content {
-					display: block;
+					display: block !important;
 					text-align: center;
 					li {
 						display: inline-block;
-					}
-				}
-			}
-		}
-	}
-}
-
-/* 
-.nav-mobile {
-			display: none;
-			position: absolute;
-			top: 0;
-			right: 17px;
-			background: $navbar-background-color;
-			height: 50px;
-			width: 50px;
-
-			#nav-toggle {
-				@include hamburger;
-			}
-		}
- */
-
-/* @mixin center-vertical {
-	position: relative;
-	top: 50%;
-	transition: translateY(-50%);
-}
-
-@mixin hamburger {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	cursor: pointer;
-	padding: 10px 35px 16px 0px;
-	span,
-	span:before,
-	span:after {
-		cursor: pointer;
-		border-radius: 1px;
-		height: 5px;
-		width: 35px;
-		background: $background-color;
-		position: absolute;
-		display: block;
-		content: '';
-		transition: all 300ms ease-in-out;
-	}
-	span:before {
-		top: -10px;
-	}
-	span:after {
-		bottom: -10px;
-	}
-	&.active span {
-		background-color: transparent;
-		&:before,
-		&:after {
-			top: 0;
-		}
-		&:before {
-			transform: rotate(45deg);
-		}
-		&:after {
-			transform: rotate(-45deg);
-		}
-	}
-}
-
-nav {
-	z-index: 999;
-	width: 100vw;
-	background: transparent;
-	position: absolute;
-	top: 30px;
-	.nav-bar {
-		width: 80%;
-		max-width: 1000px;
-		margin: 0 auto;
-		.nav-logo {
-			float: left;
-			width: 20%;
-			@include center-vertical;
-		}
-		.nav-menu {
-			@include center-vertical;
-			float: right;
-			width: 80%;
-			.nav-menu-content {
-				li {
-					float: right;
-					a {
-						display: block;
-						font-size: 14px;
-						font-weight: $medium-font-weight;
-						text-transform: uppercase;
-						padding: 0 10px;
-						line-height: 3;
-						color: $text-color-light;
-						&:hover {
-							text-decoration: none;
-							background: $hover-bg-color;
-						}
-						@media (min-width: pc-medium) {
-							padding: 0 20px;
-						}
-					}
-				}
-				@media (min-width: $tablet) {
-					display: block !important;
-				}
-			}
-		}
-
-		.nav-mobile {
-			display: none;
-			position: absolute;
-			top: 0;
-			right: 17px;
-			background: $navbar-background-color;
-			height: 50px;
-			width: 50px;
-
-			#nav-toggle {
-				@include hamburger;
-			}
-		}
-	}
-}
-
-//media queries
-@media (max-width: $phone) {
-	nav {
-		top: 0;
-		background: $navbar-background-color;
-
-		.nav-bar {
-			width: 100%;
-			.nav-logo {
-				padding: 10px;
-			}
-			.nav-menu {
-				width: 100%;
-				.nav-menu-content {
-					display: none;
-					li {
-						float: none;
 						a {
-							padding: 10px;
+							padding: 20px;
+							margin: 0 1px;
 						}
 					}
 				}
 			}
-			.nav-mobile {
-				display: block;
+		}
+	}
+
+	.content {
+		text-align: center;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		z-index: 0;
+		h1,
+		h2 {
+			z-index: -1;
+		}
+		h1 {
+			color: $text-color-light;
+			font-size: 60px;
+			font-weight: $bold-font-weight;
+			text-transform: uppercase;
+			margin-bottom: 59px;
+		}
+		h2 {
+			color: $text-color-light;
+			font-family: $paragraph-font;
+			font-size: 30px;
+			font-style: italic;
+			margin-bottom: 52px;
+		}
+
+		button {
+			@include btn-template;
+		}
+
+		@media (min-width: #{$tablet}) {
+			h1 {
+				font-size: 75px;
+			}
+			h2 {
+				font-size: 40px;
 			}
 		}
 	}
-} */
+}
