--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,8 +16,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i&subset=latin-ext");
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&subset=latin-ext");
 html,
 body,
 div,
@@ -254,6 +252,9 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     min-height: 100vh; }
   #header nav {
+    position: relative;
+    top: 0;
+    z-index: 9999;
     background: transparent;
     margin: 0 auto; }
     #header nav .logo {
@@ -264,6 +265,9 @@ body {
       #header nav .nav-bar .nav-content li {
         display: block;
         float: none; }
+        #header nav .nav-bar .nav-content li:hover {
+          text-decoration: none;
+          background: #fed136; }
         #header nav .nav-bar .nav-content li a {
           width: 100%;
           font-size: 14px;
@@ -272,9 +276,6 @@ body {
           padding: 5px 10px;
           line-height: 3;
           color: #fff; }
-          #header nav .nav-bar .nav-content li a:hover {
-            text-decoration: none;
-            background: #fed136; }
     #header nav .nav-mobile {
       display: block;
       position: absolute;
@@ -326,271 +327,74 @@ body {
       -webkit-transition: background-color 300ms ease-in-out;
       -o-transition: background-color 300ms ease-in-out;
       transition: background-color 300ms ease-in-out; }
+    #header nav.unactive-bg {
+      background-color: '';
+      -webkit-transition: background-color 300ms ease-in-out;
+      -o-transition: background-color 300ms ease-in-out;
+      transition: background-color 300ms ease-in-out; }
   @media (min-width: 768px) {
-    #header nav .nav-mobile {
-      display: none; }
-    #header nav .logo {
-      float: left;
-      display: inline-block;
-      width: 30%;
-      text-align: center;
-      padding: 1%; }
-    #header nav .nav-bar {
-      padding: 1%;
-      float: right;
-      width: 70%; }
-      #header nav .nav-bar .nav-content {
-        display: block;
-        text-align: center; }
-        #header nav .nav-bar .nav-content li {
-          display: inline-block; } }
-
-/* 
-.nav-mobile {
-			display: none;
-			position: absolute;
-			top: 0;
-			right: 17px;
-			background: $navbar-background-color;
-			height: 50px;
-			width: 50px;
-
-			#nav-toggle {
-				@include hamburger;
-			}
-		}
- */
-/* @mixin center-vertical {
-	position: relative;
-	top: 50%;
-	transition: translateY(-50%);
-}
-
-@mixin hamburger {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	cursor: pointer;
-	padding: 10px 35px 16px 0px;
-	span,
-	span:before,
-	span:after {
-		cursor: pointer;
-		border-radius: 1px;
-		height: 5px;
-		width: 35px;
-		background: $background-color;
-		position: absolute;
-		display: block;
-		content: '';
-		transition: all 300ms ease-in-out;
-	}
-	span:before {
-		top: -10px;
-	}
-	span:after {
-		bottom: -10px;
-	}
-	&.active span {
-		background-color: transparent;
-		&:before,
-		&:after {
-			top: 0;
-		}
-		&:before {
-			transform: rotate(45deg);
-		}
-		&:after {
-			transform: rotate(-45deg);
-		}
-	}
-}
-
-nav {
-	z-index: 999;
-	width: 100vw;
-	background: transparent;
-	position: absolute;
-	top: 30px;
-	.nav-bar {
-		width: 80%;
-		max-width: 1000px;
-		margin: 0 auto;
-		.nav-logo {
-			float: left;
-			width: 20%;
-			@include center-vertical;
-		}
-		.nav-menu {
-			@include center-vertical;
-			float: right;
-			width: 80%;
-			.nav-menu-content {
-				li {
-					float: right;
-					a {
-						display: block;
-						font-size: 14px;
-						font-weight: $medium-font-weight;
-						text-transform: uppercase;
-						padding: 0 10px;
-						line-height: 3;
-						color: $text-color-light;
-						&:hover {
-							text-decoration: none;
-							background: $hover-bg-color;
-						}
-						@media (min-width: pc-medium) {
-							padding: 0 20px;
-						}
-					}
-				}
-				@media (min-width: $tablet) {
-					display: block !important;
-				}
-			}
-		}
-
-		.nav-mobile {
-			display: none;
-			position: absolute;
-			top: 0;
-			right: 17px;
-			background: $navbar-background-color;
-			height: 50px;
-			width: 50px;
-
-			#nav-toggle {
-				@include hamburger;
-			}
-		}
-	}
-}
-
-//media queries
-@media (max-width: $phone) {
-	nav {
-		top: 0;
-		background: $navbar-background-color;
-
-		.nav-bar {
-			width: 100%;
-			.nav-logo {
-				padding: 10px;
-			}
-			.nav-menu {
-				width: 100%;
-				.nav-menu-content {
-					display: none;
-					li {
-						float: none;
-						a {
-							padding: 10px;
-						}
-					}
-				}
-			}
-			.nav-mobile {
-				display: block;
-			}
-		}
-	}
-} */
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-size: 16px; }
-
-body {
-  font-family: "Montserrat", sans-serif;
-  background: #fff;
-  color: #777;
-  overflow-x: hidden; }
-
-.container-fluid {
-  padding: 0; }
-
-#button {
-  display: inline-block;
-  background-color: #fed136;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  border-radius: 4px;
-  margin: 10px;
-  position: fixed;
-  bottom: 2%;
-  right: 2%;
-  -webkit-transition: background-color 0.3s;
-  -o-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-  z-index: 1000; }
-  #button i {
-    border: solid #fff;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 10px;
-    margin-top: 20px;
-    font-weight: 700;
-    font-size: 50px; }
-  #button .up {
-    -webkit-transform: rotate(-135deg);
-        -ms-transform: rotate(-135deg);
-            transform: rotate(-135deg); }
-  #button:hover {
-    cursor: pointer;
-    background-color: #333; }
-  #button:active {
-    background-color: #555; }
-
-#home .photo-inner {
-  background: url("../images/parallax-photo/background-image.png") no-repeat fixed center;
-  background-size: cover;
-  height: 100vh;
-  width: 100vw;
-  padding-top: 100px;
-  z-index: -1; }
-  #home .photo-inner .content {
+    #header nav {
+      margin-top: 20px; }
+      #header nav .nav-mobile {
+        display: none; }
+      #header nav .logo {
+        float: left;
+        display: inline-block;
+        width: 30%;
+        text-align: center;
+        padding: 1%; }
+      #header nav .nav-bar {
+        padding: 1%;
+        float: right;
+        width: 70%; }
+        #header nav .nav-bar .nav-content {
+          display: block !important;
+          text-align: center; }
+          #header nav .nav-bar .nav-content li {
+            display: inline-block; }
+            #header nav .nav-bar .nav-content li a {
+              padding: 20px;
+              margin: 0 1px; } }
+  #header .content {
     text-align: center;
     position: absolute;
     left: 50%;
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%); }
-    #home .photo-inner .content h1 {
+            transform: translate(-50%, -50%);
+    z-index: 0; }
+    #header .content h1,
+    #header .content h2 {
+      z-index: -1; }
+    #header .content h1 {
       color: #fff;
-      font-size: 75px;
+      font-size: 60px;
       font-weight: 700;
       text-transform: uppercase;
       margin-bottom: 59px; }
-    #home .photo-inner .content h2 {
+    #header .content h2 {
       color: #fff;
       font-family: "Droid Serif";
-      font-size: 40px;
+      font-size: 30px;
       font-style: italic;
       margin-bottom: 52px; }
-    @media (max-width: 767px) {
-      #home .photo-inner .content h1 {
-        font-size: 60px; }
-      #home .photo-inner .content h2 {
-        font-size: 35px; } }
-    #home .photo-inner .content button {
+    #header .content button {
       width: 265px;
       height: 65px;
       background-color: #fed136;
       border: none;
       border-radius: 5px; }
-      #home .photo-inner .content button span {
+      #header .content button span {
         font-size: 18px;
         font-weight: 700;
         text-transform: uppercase;
         color: #fff; }
+    @media (min-width: 768px) {
+      #header .content h1 {
+        font-size: 75px; }
+      #header .content h2 {
+        font-size: 40px; } }
 
 /* $pc-large: (min-width: 1200px);
 $pc-medium: (min-width: 992px);
