--- a/src/css/style.css
+++ b/src/css/style.css
@@ -139,10 +139,16 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -156,6 +162,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -190,10 +208,16 @@ body {
   #button:active {
     background-color: #555; }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -207,6 +231,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -396,10 +432,16 @@ body {
       #header .content h2 {
         font-size: 40px; } }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -413,6 +455,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -467,22 +521,21 @@ body {
   text-align: center;
   margin-bottom: 120px; }
   #services .service h3 {
-    color: #222;
-    font-family: "Montserrat", sans-serif;
     font-size: 18px;
-    font-weight: 700;
     line-height: 75px; }
   #services .service p {
-    color: #777;
-    font-family: "Roboto Slab", serif;
-    font-size: 14px;
-    font-weight: 400;
     line-height: 1.6; }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -496,6 +549,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -573,24 +638,27 @@ body {
         width: 290px; }
         #our-portfolio .gallery > .col-custom .image-box h3 {
           color: #333;
-          font-family: "Montserrat", sans-serif;
           font-size: 18px;
-          font-weight: 700;
           padding-right: 2px;
           padding-top: 29px; }
         #our-portfolio .gallery > .col-custom .image-box p {
           color: #737373;
           font-family: "Droid Serif";
-          font-size: 14px;
           font-style: italic;
           padding: 2px;
           padding-bottom: 27px;
           letter-spacing: 1px; }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -604,6 +672,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -809,10 +889,7 @@ body {
         padding-left: 20%;
         padding-right: 0; } }
   #about-us .timeline h3 {
-    color: #222;
-    font-family: "Montserrat", sans-serif;
     font-size: 18px;
-    font-weight: 700;
     margin-bottom: 17px; }
     #about-us .timeline h3 > span {
       text-transform: uppercase; }
@@ -826,10 +903,6 @@ body {
       #about-us .timeline h3 {
         font-size: 14px; } }
   #about-us .timeline p {
-    color: #777;
-    font-family: "Roboto Slab", serif;
-    font-size: 14px;
-    font-weight: 400;
     line-height: 1.3; }
     @media (min-width: 992px) and (max-width: 1199px) {
       #about-us .timeline p {
@@ -838,10 +911,16 @@ body {
       #about-us .timeline p {
         font-size: 11px; } }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -855,6 +934,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -911,34 +1002,18 @@ body {
     padding-right: 0;
     text-align: center; }
     #team .team-member h3 {
+      line-height: 40px;
       margin: 0;
-      padding: 0;
-      color: #222;
-      font-family: "Montserrat", sans-serif;
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 40px; }
+      padding: 0; }
     #team .team-member p {
-      color: #777;
-      font-family: "Roboto Slab", serif;
-      font-size: 14px;
-      font-weight: 400;
       line-height: 10px; }
-    #team .team-member .social-icons {
-      padding: 20px; }
-      #team .team-member .social-icons .icon-btn {
-        font-size: 20px;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        border: 3px solid #000;
-        background-color: transparent;
-        color: #000;
-        cursor: pointer;
-        margin: 0 10px; }
-        #team .team-member .social-icons .icon-btn:hover {
-          background-color: #000;
-          color: #fff; }
+    #team .team-member .social-icons .icon-btn {
+      background-color: transparent;
+      border: 3px solid #000;
+      color: #000; }
+      #team .team-member .social-icons .icon-btn:hover {
+        background-color: #000;
+        color: #fff; }
   #team .description {
     padding: 50px;
     margin-bottom: 70px; }
@@ -949,10 +1024,16 @@ body {
       font-weight: 400;
       text-align: center; }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -966,6 +1047,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -1008,10 +1101,16 @@ body {
     padding-right: 0;
     margin: 20px auto; }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1025,6 +1124,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -1119,10 +1230,16 @@ body {
     width: 45%;
     height: 80%; }
 
-/* $pc-large: (min-width: 1200px);
-$pc-medium: (min-width: 992px);
-$tablet: (min-width: 768px);
-$phone: (max-width: 767px); */
+#team .team-member .social-icons, footer .social-media {
+  padding: 20px; }
+  #team .team-member .social-icons .icon-btn, footer .social-media .icon-btn {
+    font-size: 20px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin: 0 10px; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1136,6 +1253,18 @@ body {
 
 .container-fluid {
   padding: 0; }
+
+h3 {
+  color: #222;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 700; }
+
+p {
+  color: #777;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-weight: 400; }
 
 #button {
   display: inline-block;
@@ -1172,22 +1301,14 @@ body {
 
 footer {
   position: relative; }
-  footer .social-media {
-    padding: 20px; }
-    footer .social-media .icon-btn {
-      font-size: 20px;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      background-color: #000;
-      border: none;
-      color: #fff;
-      cursor: pointer;
-      margin: 0 10px; }
-      footer .social-media .icon-btn:hover {
-        background-color: #fff;
-        color: #000;
-        border: 3px solid #000; }
+  footer .social-media .icon-btn {
+    background-color: #000;
+    border: none;
+    color: #fff; }
+    footer .social-media .icon-btn:hover {
+      background-color: #fff;
+      color: #000;
+      border: 3px solid #000; }
   footer .copyright {
     display: inline-block;
     position: absolute;
