--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -44,7 +44,7 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	height: 100vh;
+	//height: 100vh;
 	color: $text-color-light;
 	.opacity {
 		background-color: rgba(0, 0, 0, 0.5);
